VIL-880: fix <span> wrong height in .button in button.module.css

--- a/src/frontend/components/ui/Button/button.module.css
+++ b/src/frontend/components/ui/Button/button.module.css
@@ -17,6 +17,10 @@
     -webkit-tap-highlight-color: transparent;
 }
 
+.button > span {
+    display: inline-flex;
+}
+
 .variant-contained {
     box-shadow:
         rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
